# assessment-bench

./: .env.example  .gitignore  AI_ASSESSOR_SPECIFICATION.md  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  REQUIREMENTS.md  WINDOWS_DISTRIBUTION.md  ai_assessor_main.py  aiassessor.py  aiassessor_cli.py  build_windows.py  config.ini.template  config_manager.py  env.example  eslint.config.js  index.html  main.py  marking.py  package-lock.json  package.json  pyinstaller_build.py  pyproject.toml  requirements.txt  run_ai_assessor.bat  setup_build_windows.bat  standalone.py  system_prompt.txt  tailwind.config.js  user_prompt.txt  utils.py  vite.config.ts
ai_assessor/: __init__.py
ai_assessor/cli/: cli.py
ai_assessor/core/: __init__.py  api_client.py  assessor.py
ai_assessor/ui/: gui.py
ai_assessor/ui/views/: config_view.py  grading_view.py
ai_assessor/utils/: __init__.py  error_handling.py  file_utils.py
aiassessor/cli/: __init__.py
aiassessor/config/: config_manager.py
aiassessor/core/: api_client.py
aiassessor/ui/: __init__.py
aiassessor/ui/views/: __init__.py
aiassessor/utils/: document_processor.py
cli/: README.md  batch_grader.py  example_usage.py  requirements.txt  sample_config.json
core/: api_client.py  assessor.py
default_prompts/: system_prompt.txt
docs/: DEVELOPMENT.md  SPECIFICATION.md
prompts/: example_user_prompt.txt
scripts/: generate-icons.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src-tauri/examples/: test_db.rs
src-tauri/src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/src/analysis/: comparison.rs  export.rs  mod.rs  statistics.rs
src-tauri/src-tauri/src/commands/: analysis.rs  document.rs  grading.rs  mod.rs  project.rs  provider.rs  simple_project.rs
src-tauri/src-tauri/src/db/: migrations.rs  mod.rs  models.rs  simple.rs  test.rs
src-tauri/src-tauri/src/document/: mod.rs
src-tauri/src-tauri/src/document_analysis/: client.rs  mod.rs  models.rs
src-tauri/src-tauri/src/grading/: aggregation.rs  mod.rs  tiers.rs  validation.rs
src-tauri/src-tauri/src/llm/: mod.rs  openai.rs  provider.rs
src-tauri/src/analysis/: comparison.rs  export.rs  mod.rs  statistics.rs
src-tauri/src/commands/: analysis.rs  document.rs  grading.rs  mod.rs  project.rs  provider.rs  simple_project.rs
src-tauri/src/db/: migrations.rs  mod.rs  simple.rs  test.rs
src-tauri/src/document/: mod.rs
src-tauri/src/grading/: aggregation.rs  mod.rs  tiers.rs  validation.rs
src-tauri/src/llm/: anthropic.rs  gemini.rs  mod.rs  openai.rs  provider.rs
src/assessment_bench/: __init__.py  api.py  arms.py  cli.py  exceptions.py  experiment.py  manifest.py  models.py  providers.py  report.py  stats.py
src/assessment_bench/data/: example-experiment.yaml
src/components/: AssignmentSpecPreview.tsx  ComparisonDashboard.tsx  DocumentAnalysisPreview.tsx  GradingView.tsx  Header.tsx  HistoryView.tsx  Layout.tsx  ProjectManager.tsx  PromptEditor.tsx  ResultsDashboard.tsx  SettingsView.tsx  Sidebar.tsx  SupportFileManager.tsx  TemplateLibrary.tsx  TestingLab.tsx  WorkflowSelector.tsx
src/data/: built-in-templates.ts
src/hooks/: useToast.tsx
src/lib/: documentAnalysis.ts  tauri.ts  utils.ts
src/stores/: projectStore.ts  useAppStore.ts
src/styles/: App.css  globals.css  index.css
src/types/: index.ts  templates.ts
src/utils/: assignmentParser.ts  exportUtils.ts
submissions/: 47.docx  47b.docx
support/: Industry Visit Report Guidelines.docx  Industry Visit Report Marking Guide.docx  Industry Visit Report Rubric.docx  rubric.docx
tests/: test_api.py  test_arms.py  test_experiment.py  test_models.py  test_providers.py  test_stats.py
